chore: refactor to bulk and single mode